--- a/home_style.css
+++ b/home_style.css
@@ -6,13 +6,13 @@
 #header h1 {
     float: left;
     width: 30%;
-    margin-left: 1.5%;
-    padding-left: 1%;
+    margin-left: 1.275%;
+    padding-left: .75%;
     font-family: Helvetica, sans-serif;
     font-size: 2.75em;
     text-decoration: underline;
     color: #eee;
-    margin-top: 1.21%;
+    margin-top: 1.23%;
 }
 
 #menubar {
@@ -23,7 +23,7 @@
     width: 55%;
     border: 1.5px solid white;
     border-radius: 10px;
-    margin-top: .75%;
+    margin-top: .77%;
     background: rgba(0, 0, 0, .77);
 }
 
