--- a/home_style.css
+++ b/home_style.css
@@ -3,26 +3,30 @@
     width: 100%;
 }
 
+#profileSection
+{
+    float: left;
+    width: 100%;
+}
+
 #header h1 {
     float: left;
-    width: 30%;
     font-family: Helvetica, sans-serif;
     font-size: 3.25em;
     text-decoration: underline;
     color: #eee;
-    margin-left: 7.7%;
-    margin-top: 1.75%;
+    margin-top: 2.25%;
+    margin-left: 2.5%;
 }
 
 #menubar {
-    float: right;
-    /*width: 70%;*/
+    float: left;
+    width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     border: 1.5px solid white;
     border-radius: 10px;
-    margin-top: 1.177%;
     background: rgba(0, 0, 0, .77);
 }
 
@@ -100,8 +104,9 @@ a:link, a:visited, a:hover, a:active {
     float: left;
     width: 98px;
     height: 102px;
-    margin-left: 2.1%;
-    margin-top: .7em;
+    margin-left: 3%;
+    margin-bottom: 2%;
+    margin-top: 1%;
     border: 2px solid white;
     border-radius: 50%;
 }
